--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
           crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,600;1,700&family=Peddana&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,700&display=swap"
           rel="stylesheet">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+          crossorigin="anonymous"
+          referrerpolicy="no-referrer" />
     <title>Practice Projects</title>
     <link rel="stylesheet"
           href="style.css">
@@ -111,8 +116,35 @@
         </div>
     </section>
     <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="future">
+                    <h3 class="plan-title footer-title">Future</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words</p>
+                    <div class="mail-phone">
+                        <span>Email : info@gmail.com</span>
+                        <span>Phone : 01500 00 00 00</span>
+                    </div>
+                    <ul class="text-white social-icon">
+                        <li><i class="fa-brands fa-facebook-f"></i></li>
+                        <li><i class="fa-brands fa-twitter"></i> </li>
+                        <li><i class="fa-brands fa-youtube"></i></li>
+                    </ul>
+                </div>
+
+                <div class="subscribe">
+                    something
+                </div>
+            </div>
+        </div>
 
     </footer>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css"
+          integrity="sha512-SgaqKKxJDQ/tAUAAXzvxZz33rmn7leYDYfBP+YoMRSENhf3zJyx3SBASt/OfeQwBHA1nxMis7mM3EV/oYT6Fdw=="
+          crossorigin="anonymous"
+          referrerpolicy="no-referrer" />
 </body>
 
 </html>
